[feat] Implement Header

--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap');
+
+.AlignItemsCenter {
+  display: flex;
+  align-items: center;
+}
